--- a/LongNumCalc/MainWindow.xaml
+++ b/LongNumCalc/MainWindow.xaml
@@ -5,36 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LongNumCalc"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="LongNumCalc" Height="300" Width="500" ResizeMode="NoResize">
     <Window.Resources>
         <Color x:Key="second_color_console">#FF75798A</Color>
     </Window.Resources>
 
-    <Grid Height="319" VerticalAlignment="Top">
-        <Button x:Name="button_1" Content="1" HorizontalAlignment="Left" Margin="46,168,0,0" VerticalAlignment="Top" Width="75" Click="button_1_Click"/>
-        <Button x:Name="button_4" Content="4" HorizontalAlignment="Left" Margin="46,127,0,0" VerticalAlignment="Top" Width="75" Click="button_4_Click"/>
-        <Button x:Name="button_7" Content="7" HorizontalAlignment="Left" Margin="46,93,0,0" VerticalAlignment="Top" Width="75" Click="button_7_Click"/>
-        <Button x:Name="button_8" Content="8" HorizontalAlignment="Left" Margin="158,93,0,0" VerticalAlignment="Top" Width="75" Click="button_8_Click"/>
-        <Button x:Name="button_5" Content="5" HorizontalAlignment="Left" Margin="158,127,0,0" VerticalAlignment="Top" Width="75" Click="button_5_Click"/>
-        <Button x:Name="button_2" Content="2" HorizontalAlignment="Left" Margin="158,168,0,0" VerticalAlignment="Top" Width="75" Click="button_2_Click"/>
-        <Button x:Name="button_9" Content="9" HorizontalAlignment="Left" Margin="279,93,0,0" VerticalAlignment="Top" Width="75" Click="button_9_Click"/>
-        <Button x:Name="button_6" Content="6" HorizontalAlignment="Left" Margin="279,127,0,0" VerticalAlignment="Top" Width="75" Click="button_6_Click"/>
-        <Button x:Name="button_3" Content="3" HorizontalAlignment="Left" Margin="279,168,0,0" VerticalAlignment="Top" Width="75" Click="button_3_Click"/>
-        <Button x:Name="button_0" Content="0" HorizontalAlignment="Left" Margin="46,207,0,0" VerticalAlignment="Top" Width="75" Click="button_0_Click"/>
-        <Button x:Name="button_dot" Content="." HorizontalAlignment="Left" Margin="158,207,0,0" VerticalAlignment="Top" Width="75" Click="button_dot_Click"/>
-        <Button x:Name="button_res" Content="=" HorizontalAlignment="Left" Margin="279,207,0,0" VerticalAlignment="Top" Width="75" Click="button_res_Click" />
-        <TextBox x:Name="tb_console_one" HorizontalAlignment="Left" Height="32" Margin="46,44,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="445" />
-        <Button x:Name="button_minus" Content="-" HorizontalAlignment="Left" Margin="404,132,0,0" VerticalAlignment="Top" Width="75" Click="button_minus_Click"/>
-        <Button x:Name="button_mult" Content="*" HorizontalAlignment="Left" Margin="404,173,0,0" VerticalAlignment="Top" Width="75" Click="button_mult_Click"/>
-        <Button x:Name="button_div" Content="/" HorizontalAlignment="Left" Margin="404,207,0,0" VerticalAlignment="Top" Width="75" Click="button_div_Click"/>
-        <Button x:Name="button_leftbrace" Content="(" HorizontalAlignment="Left" Margin="279,237,0,0" VerticalAlignment="Top" Width="75" Click="button_leftbrace_Click"/>
-        <Button x:Name="button_rightbrace" Content=")" HorizontalAlignment="Left" Margin="404,237,0,0" VerticalAlignment="Top" Width="75" Click="button_rightbrace_Click"/>
-        <Button x:Name="button_plus" Content="+" HorizontalAlignment="Left" Margin="404,93,0,0" VerticalAlignment="Top" Width="75" Click="button_plus_Click"/>
-        <TextBox x:Name="tb_console_two" HorizontalAlignment="Left" Height="29" Margin="46,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="445" BorderBrush="White" >
+    <Grid Height="275" VerticalAlignment="Top" Margin="0,0,0,-3">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="113*"/>
+            <RowDefinition Height="161*"/>
+        </Grid.RowDefinitions>
+        <Button x:Name="button_1" Content="1" HorizontalAlignment="Left" Margin="25,70,0,0" VerticalAlignment="Top" Width="75" Click="button_1_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_4" Content="4" HorizontalAlignment="Left" Margin="25,35,0,0" VerticalAlignment="Top" Width="75" Click="button_4_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_7" Content="7" HorizontalAlignment="Left" Margin="25,0,0,0" VerticalAlignment="Top" Width="75" Click="button_7_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_8" Content="8" HorizontalAlignment="Left" Margin="105,0,0,0" VerticalAlignment="Top" Width="75" Click="button_8_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_5" Content="5" HorizontalAlignment="Left" Margin="105,35,0,0" VerticalAlignment="Top" Width="75" Click="button_5_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_2" Content="2" HorizontalAlignment="Left" Margin="105,70,0,0" VerticalAlignment="Top" Width="75" Click="button_2_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_9" Content="9" HorizontalAlignment="Left" Margin="185,0,0,0" VerticalAlignment="Top" Width="75" Click="button_9_Click" Height="30" Grid.Row="1"/>
+        <Button x:Name="button_6" Content="6" HorizontalAlignment="Left" Margin="185,35,0,0" VerticalAlignment="Top" Width="75" Click="button_6_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_3" Content="3" HorizontalAlignment="Left" Margin="185,70,0,0" VerticalAlignment="Top" Width="75" Click="button_3_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_0" Content="0" HorizontalAlignment="Left" Margin="25,105,0,0" VerticalAlignment="Top" Width="75" Click="button_0_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_dot" Content="." HorizontalAlignment="Left" Margin="105,105,0,0" VerticalAlignment="Top" Width="75" Click="button_dot_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_res" Content="=" HorizontalAlignment="Left" Margin="185,105,0,0" VerticalAlignment="Top" Width="75" Click="button_res_Click" Background="#FF4185F3" Foreground="White" BorderBrush="#FF4185F3" Grid.Row="1" Height="30" />
+        <TextBox x:Name="tb_console_one" HorizontalAlignment="Left" Height="40" Margin="25,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430" FontSize="18" />
+        <Button x:Name="button_minus" Content="-" HorizontalAlignment="Left" Margin="380,35,0,0" VerticalAlignment="Top" Width="75" Click="button_minus_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_mult" Content="*" HorizontalAlignment="Left" Margin="300,70,0,0" VerticalAlignment="Top" Width="75" Click="button_mult_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_div" Content="/" HorizontalAlignment="Left" Margin="380,70,0,0" VerticalAlignment="Top" Width="75" Click="button_div_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_leftbrace" Content="(" HorizontalAlignment="Left" Margin="300,105,0,0" VerticalAlignment="Top" Width="75" Click="button_leftbrace_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_rightbrace" Content=")" HorizontalAlignment="Left" Margin="380,105,0,0" VerticalAlignment="Top" Width="75" Click="button_rightbrace_Click" Grid.Row="1" Height="30"/>
+        <Button x:Name="button_plus" Content="+" HorizontalAlignment="Left" Margin="300,35,0,0" VerticalAlignment="Top" Width="75" Click="button_plus_Click" Grid.Row="1" Height="30"/>
+        <TextBox x:Name="tb_console_two" HorizontalAlignment="Left" Height="20" Margin="25,40,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="429" BorderBrush="White" IsEnabled="False" FontSize="16" >
             <TextBox.Foreground>
                 <SolidColorBrush Color="{DynamicResource second_color_console}"/>
             </TextBox.Foreground>
         </TextBox>
+        <Button x:Name="button_del" Content="D" HorizontalAlignment="Left" Margin="300,0,0,0" VerticalAlignment="Top" Width="75" Height="30" Grid.Row="1" Click="button_del_Click"/>
+        <Button x:Name="button1_delall" Content="DA" HorizontalAlignment="Left" Margin="380,0,0,0" VerticalAlignment="Top" Width="75" Height="30" Grid.Row="1" Click="button1_delall_Click"/>
 
     </Grid>
 </Window>
