--- a/LongNumCalc/MainWindow.xaml
+++ b/LongNumCalc/MainWindow.xaml
@@ -12,8 +12,8 @@
 
     <Grid Height="275" VerticalAlignment="Top" Margin="0,0,0,-3">
         <Grid.RowDefinitions>
-            <RowDefinition Height="113*"/>
-            <RowDefinition Height="161*"/>
+            <RowDefinition Height="115*"/>
+            <RowDefinition Height="160*"/>
         </Grid.RowDefinitions>
         <Button x:Name="button_1" Content="1" HorizontalAlignment="Left" Margin="25,70,0,0" VerticalAlignment="Top" Width="75" Click="button_1_Click" Grid.Row="1" Height="30"/>
         <Button x:Name="button_4" Content="4" HorizontalAlignment="Left" Margin="25,35,0,0" VerticalAlignment="Top" Width="75" Click="button_4_Click" Grid.Row="1" Height="30"/>
@@ -26,15 +26,15 @@
         <Button x:Name="button_3" Content="3" HorizontalAlignment="Left" Margin="185,70,0,0" VerticalAlignment="Top" Width="75" Click="button_3_Click" Grid.Row="1" Height="30"/>
         <Button x:Name="button_0" Content="0" HorizontalAlignment="Left" Margin="25,105,0,0" VerticalAlignment="Top" Width="75" Click="button_0_Click" Grid.Row="1" Height="30"/>
         <Button x:Name="button_dot" Content="." HorizontalAlignment="Left" Margin="105,105,0,0" VerticalAlignment="Top" Width="75" Click="button_dot_Click" Grid.Row="1" Height="30"/>
-        <Button x:Name="button_res" Content="=" HorizontalAlignment="Left" Margin="185,105,0,0" VerticalAlignment="Top" Width="75" Click="button_res_Click" Background="#FF4185F3" Foreground="White" BorderBrush="#FF4185F3" Grid.Row="1" Height="30" />
-        <TextBox x:Name="tb_console_one" HorizontalAlignment="Left" Height="40" Margin="25,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430" FontSize="18" />
+        <Button x:Name="button_res" Content="=" HorizontalAlignment="Left" Margin="185,105,0,0" VerticalAlignment="Top" Width="75" Click="button_res_Click" Background="#FF4185F3" Foreground="White" BorderBrush="#FF4185F3" Grid.Row="1" Height="30" FontFamily="Segoe WP Black" />
+        <TextBox x:Name="tb_console_one" MaxLength="86" HorizontalAlignment="Left" Height="50" Margin="25,60,0,0" Text="" VerticalAlignment="Top" Width="430" FontSize="18" PreviewTextInput="tb_console_one_PreviewTextInput" IsHitTestVisible="True" TextWrapping="Wrap" PreviewKeyDown="tb_console_one_PreviewKeyDown" />
         <Button x:Name="button_minus" Content="-" HorizontalAlignment="Left" Margin="380,35,0,0" VerticalAlignment="Top" Width="75" Click="button_minus_Click" Grid.Row="1" Height="30"/>
         <Button x:Name="button_mult" Content="*" HorizontalAlignment="Left" Margin="300,70,0,0" VerticalAlignment="Top" Width="75" Click="button_mult_Click" Grid.Row="1" Height="30"/>
         <Button x:Name="button_div" Content="/" HorizontalAlignment="Left" Margin="380,70,0,0" VerticalAlignment="Top" Width="75" Click="button_div_Click" Grid.Row="1" Height="30"/>
         <Button x:Name="button_leftbrace" Content="(" HorizontalAlignment="Left" Margin="300,105,0,0" VerticalAlignment="Top" Width="75" Click="button_leftbrace_Click" Grid.Row="1" Height="30"/>
         <Button x:Name="button_rightbrace" Content=")" HorizontalAlignment="Left" Margin="380,105,0,0" VerticalAlignment="Top" Width="75" Click="button_rightbrace_Click" Grid.Row="1" Height="30"/>
         <Button x:Name="button_plus" Content="+" HorizontalAlignment="Left" Margin="300,35,0,0" VerticalAlignment="Top" Width="75" Click="button_plus_Click" Grid.Row="1" Height="30"/>
-        <TextBox x:Name="tb_console_two" HorizontalAlignment="Left" Height="20" Margin="25,40,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="429" BorderBrush="White" IsEnabled="False" FontSize="16" >
+        <TextBox x:Name="tb_console_two" HorizontalAlignment="Left" Height="50" Margin="25,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="429" BorderBrush="White" IsEnabled="False" FontSize="17" >
             <TextBox.Foreground>
                 <SolidColorBrush Color="{DynamicResource second_color_console}"/>
             </TextBox.Foreground>
